<resources>
    <string name="app_name">KeepCharge</string>
    <string name="account">账号</string>
    <string name="lock">密码</string>
    <string name="login">登录</string>
    <string name="auto_login">自动登录</string>
    <string name="account_null_tip">账号不能为空</string>
    <string name="lock_null_tip">密码不能为空</string>
    <string name="account_lock_error">账号或密码错误</string>
    <string name="store">店铺</string>
    <string name="statistics">统计</string>
    <string name="txby">桐乡佰忆</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_store">添加店铺</string>
    <string name="yesterday">昨日：</string>
    <string name="income">收入：</string>
    <string name="payment">支出：</string>
    <string name="default_store">1号店</string>
    <string name="store_name">店铺名</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="please_input_store_name">请输入店铺名</string>
    <string name="repeat_store_name">店铺名重复了亲！</string>
    <string name="app_error">程序出错了亲！</string>
    <string name="store_name_can_not_be_null">店铺名不能为空哦亲！</string>
    <string name="search_history_bills">搜索历史账单</string>
    <string name="no_history_bills">没有历史纪录</string>
    <string name="money">金额：</string>
    <string name="type">类型：</string>
    <string name="in">收入</string>
    <string name="out">支出</string>
    <string name="note">备注：</string>
    <string name="record_bill">录入账单</string>
    <string name="please_input_money_tip">请输入金额哦亲！</string>
    <string name="save_error">保存失败</string>
    <string name="save_ok">保存成功</string>
    <string name="bills_record">账单记录</string>
    <string name="bill_note">账单备注：</string>
    <string name="create_time">创建时间：</string>
    <string name="update_money">修改金额：</string>
    <string name="one_key_update_bill_type">一键修改账单类型</string>
    <string name="bills_spec">账单详情</string>
    <string name="money_can_not_be_null">金额不能为空哦亲！</string>
    <string name="update_error">修改失败！</string>
    <string name="update_ok">修改成功！</string>
    <string name="output">导出</string>
    <string name="bills_output">账单导出</string>
    <string name="choose_store">选择店铺：</string>
    <string name="choose_year">选择年份：</string>
    <string name="choose_month">选择月份：</string>
    <string name="output_bill">导出账单</string>
    <string name="need_write_permission">需要写入权限才可以使用该功能哦亲！</string>
    <string name="output_to_folder_document_successful">导出到手机存储文件夹Document成功</string>
    <string name="no_sd_card">手机没有插入存储卡哦亲！</string>
    <string name="date">日期：</string>
    <string name="time">时间：</string>
    <string name="please_choose_date">请选择日期</string>
    <string name="please_choose_time">请选择时间</string>
    <string name="please_input_date_tip">请选择日期哦亲！</string>
    <string name="please_choose_time_tip">请选择时间哦亲！</string>
    <string name="retain">净利润：</string>
    <string name="auth_info_error">您的用户信息已失效！</string>
    <string name="logo_in">入</string>
    <string name="logo_out">出</string>
    <string name="search">搜索</string>
    <string name="please_input_bill_note">请输入账单备注关键字</string>
    <string name="pull_for_more">上拉加载更多</string>
    <string name="loading">正在加载</string>
    <string name="total_assets">总资产</string>
    <string name="finance">财富</string>
    <string name="total_income">总收入</string>
    <string name="total_payment">总支出</string>
    <string name="_0_00">0.00</string>
    <string name="no_record">该月没有记录</string>
</resources>
