<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/bills_output"
            app:titleTextColor="@color/colorWhite" />

    </android.support.design.widget.AppBarLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp">

        <TableRow android:gravity="center_vertical">

            <TextView android:text="@string/choose_store" />

            <Spinner
                android:id="@+id/spinner_store"
                android:layout_width="0dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">

            <TextView android:text="@string/choose_year" />

            <Spinner
                android:id="@+id/spinner_year"
                android:layout_width="0dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">

            <TextView android:text="@string/choose_month" />

            <Spinner
                android:id="@+id/spinner_month"
                android:layout_width="0dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btn_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/output_bill"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

</LinearLayout>
