<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:id="@+id/card_store"
                                    android:layout_width="match_parent"
                                    android:layout_height="140dp"
                                    android:layout_margin="10dp"
                                    android:clickable="true"
                                    android:focusable="true"
                                    android:foreground="?android:attr/selectableItemBackground"
                                    app:cardCornerRadius="5dp"
                                    app:cardElevation="8dp"
                                    app:contentPadding="10dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/iv_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_store"/>

        <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_store"
                android:layout_centerHorizontal="true"
                android:text="@string/default_store"
                android:textStyle="bold"/>

        <LinearLayout
                android:id="@+id/ll_retain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retain"/>

            <TextView
                    android:id="@+id/tv_retain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_00"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_retain"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:textColor="@color/colorHoloRedLight"/>

            <TextView
                    android:id="@+id/tv_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/_0_00"
                    android:textColor="@color/colorHoloRedLight"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment"
                    android:textColor="@color/colorHoloGreenLight"/>

            <TextView
                    android:id="@+id/tv_payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_00"
                    android:textColor="@color/colorHoloGreenLight"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>