<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <com.yinglan.alphatabs.AlphaTabsIndicator
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true">

        <com.yinglan.alphatabs.AlphaTabView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                app:tabIconNormal="@mipmap/ic_store"
                app:tabIconSelected="@mipmap/ic_store_on"
                app:tabText="@string/store"
                app:tabTextSize="12sp"
                app:textColorSelected="@color/colorPrimary"/>

        <com.yinglan.alphatabs.AlphaTabView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                app:tabIconNormal="@mipmap/ic_statistics"
                app:tabIconSelected="@mipmap/ic_statistics_on"
                app:tabText="@string/statistics"
                app:tabTextSize="12sp"
                app:textColorSelected="@color/colorPrimary"/>

    </com.yinglan.alphatabs.AlphaTabsIndicator>

    <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottom_bar">

        <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:title="@string/txby"
                    app:titleTextColor="@color/colorWhite"/>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
                android:id="@+id/vp_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/bottom_bar"
                android:layout_below="@id/bottom_bar"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>